[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tiles.tres" type="TileSet" id=1]
[ext_resource path="res://Map.gd" type="Script" id=2]
[ext_resource path="res://Arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fish.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fisherman.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/blank.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 10, 570, 0, 0, 0, 0, 1020, 570 )
}

[node name="Map" type="TileMap"]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 2 )
_sections_unfolded = [ "Cell", "Collision", "Visibility" ]
Arrow = ExtResource( 3 )
Fish = ExtResource( 4 )
Fisherman = ExtResource( 5 )

[node name="SpawnTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="SpawnPath" type="Path2D" parent="." index="1"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath" index="0"]

position = Vector2( 10, 570 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Background" type="Sprite" parent="CanvasLayer" index="0"]

texture = ExtResource( 6 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="ArrowTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="ArrowTimer" to="." method="_on_ArrowTimer_timeout"]


